new exam and beta  pages

--- a/learn-certs-pr/d365-fundamentals-customer-engagement-apps-crm/index.yml
+++ b/learn-certs-pr/d365-fundamentals-customer-engagement-apps-crm/index.yml
@@ -1,7 +1,7 @@
 ### YamlMime:Certification
-title: 'Microsoft Certified: Dynamics 365 Fundamentals Customer Engagement Apps (CRM)'
+title: 'Microsoft Certified: Dynamics 365 Fundamentals (CRM)'
 metadata:
-  title: 'Microsoft Certified: Dynamics 365 Fundamentals Customer Engagement Apps (CRM)'
+  title: 'Microsoft Certified: Dynamics 365 Fundamentals (CRM)'
   description: 'Если вы знакомы с бизнес-операциями и управлением отношениями с клиентами (CRM) и разбираетесь в IT — в связи с жизненным или рабочим опытом — воспользуйтесь этой сертификацией для подтверждения своих навыков. Подтвердите глубокое знание возможностей Dynamics 365 для взаимодействия с клиентами с целью улучшения своего карьерного пути.'
 uid: certification.d365-fundamentals-customer-engagement-apps-crm
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
@@ -53,7 +53,7 @@ resources:
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAmVj
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Обучение для получения сертификата
   description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I
