--- a/learn-certs-pr/exams/mb-920.yml
+++ b/learn-certs-pr/exams/mb-920.yml
@@ -1,20 +1,19 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Fundamentals Finance and Operations Apps (ERP) (beta)
+title: Microsoft Dynamics 365 Fundamentals (ERP)
 metadata:
-  title: 'Exam MB-920: Microsoft Dynamics 365 Fundamentals Finance and Operations Apps (ERP) (beta)'
-  description: 'Exam MB-920: Microsoft Dynamics 365 Fundamentals Finance and Operations Apps (ERP) (beta)'
+  title: 'Exam MB-920: Microsoft Dynamics 365 Fundamentals (ERP)'
+  description: 'Exam MB-920: Microsoft Dynamics 365 Fundamentals (ERP)'
 uid: exam.mb-920
 displayName: MB-920
 summary: |-
   Этот экзамен охватывает функции и возможности приложений Microsoft Dynamics 365 для финансов и операций.
 
   Кандидаты на этот экзамен должны обладать общими знаниями о среде информационных технологий (IT) или соответствующим опытом работы в такой среде. Кандидаты на этот экзамен также должны обладать фундаментальным пониманием финансовых принципов и бизнес-операций.
- 
-  <div><br/><font color='red'><strong>Баллы за бета-экзамены не выставляются сразу, потому что мы собираем данные о качестве вопросов и экзамена. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Узнайте больше о ценности и важности бета-версий экзаменов</a>.</strong></font></div>
+
 subTitle: 'Этот экзамен измеряет вашу способность описывать следующее: Dynamics 365 Supply Chain Management; Dynamics Finance; Dynamics 365 Commerce; Dynamics 365 Human Resources; операции проекта и общие компоненты.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JFBT
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-920&examname=Exam%20MB-920:%20Microsoft%20Dynamics%20365%20Fundamentals%20Finance%20and%20Operations%20Apps%20(ERP)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-920
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-920&examname=Exam%20MB-920:%20Microsoft%20Dynamics%20365%20Fundamentals%20(ERP)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-920
 locales:
 - en
 levels:
@@ -34,6 +33,8 @@ roles:
 products: 
 - dynamics-365
 - dynamics-finance-operations
+courses:
+- uid: course.mb-920t00
 paths:
 - uid: learn.wwl.explore-microsoft-dynamics-365-supply-chain-management
 - uid: learn.wwl.explore-microsoft-dynamics-365-finance
@@ -49,7 +50,7 @@ resources:
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAFfQ
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Плакат с сертификацией
   description: Ознакомьтесь с обзором сертификации основ, ролевой и специальной сертификациями.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
